<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVariant">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCharacter"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:elevation="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCharacterImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/black"
                android:contentDescription="@string/character_detail_character_image"
                android:scaleType="fitCenter"
                android:src="@drawable/rickmortyteste"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvCharacterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="8dp"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCharacter"
        tools:text="Rick Sanchez" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="8dp"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterName" />

    <LinearLayout
        android:id="@+id/llSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_detail_species_icon"
            android:src="@drawable/ic_outline_species_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:text="@string/species"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterSpecies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            tools:text="Human" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSpecies">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_detail_gender_icon"
            android:src="@drawable/ic_outline_gender_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterGender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            tools:text="Male" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGender">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_detail_status_icon"
            android:src="@drawable/ic_outline_status_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            tools:text="Alive" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStatus">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_detail_location_icon"
            android:src="@drawable/ic_outline_location_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            tools:text="Earth (Replacement Dimension)" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLocation">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/character_detail_origin_icon"
            android:src="@drawable/ic_outline_origin_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical"
            android:text="@string/origin"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCharacterOrigin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            tools:text="Earth (C-137)" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>